# nx-plasma-look-and-feel

./: .travis.yml  CMakeLists.txt  README.md  gh-build.sh  travis-build.sh
color-scheme/: CMakeLists.txt  Nitrux.colors  NitruxDark.colors  NitruxDarkStation.colors  Nomad.colors  Nomad.colorscheme  NomadDark.colors
look-and-feel/: CMakeLists.txt
look-and-feel/org.kde.nitrux.dark.desktop/: metadata.desktop
look-and-feel/org.kde.nitrux.dark.desktop/contents/: defaults
look-and-feel/org.kde.nitrux.dark.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.nitrux.dark.desktop/contents/lockscreen/: LockScreenUi.qml
look-and-feel/org.kde.nitrux.desktop/: metadata.desktop
look-and-feel/org.kde.nitrux.desktop/contents/: defaults
look-and-feel/org.kde.nitrux.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.nitrux.mix.desktop/: metadata.desktop
look-and-feel/org.kde.nitrux.mix.desktop/contents/: defaults
look-and-feel/org.kde.nitrux.mix.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.nomad.dark.desktop/: metadata.desktop
look-and-feel/org.kde.nomad.dark.desktop/contents/: defaults
look-and-feel/org.kde.nomad.dark.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.nomad.dark.desktop/contents/lockscreen/: LockScreenUi.qml
look-and-feel/org.kde.nomad.dark.desktop/contents/logout/: Logout.qml
look-and-feel/org.kde.nomad.dark.desktop/contents/splash/: Splash.qml
look-and-feel/org.kde.nomad.desktop/: metadata.desktop
look-and-feel/org.kde.nomad.desktop/contents/: defaults
look-and-feel/org.kde.nomad.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.nomad.mix.desktop/: metadata.desktop
look-and-feel/org.kde.nomad.mix.desktop/contents/: defaults
plasma/: CMakeLists.txt
plasma/P-Connor.PlasmaDrawer/: CMakeLists.txt
plasma/a2n.blur.2/: CMakeLists.txt
plasma/com.darkeye.timedImage/: CMakeLists.txt  metadata.desktop
plasma/com.darkeye.timedImage-master/: CMakeLists.txt
plasma/com.enielrodriguez.optimus.gpu.switcher/: CMakeLists.txt  metadata.json
plasma/com.github.configurable_button/: CMakeLists.txt  metadata.desktop
plasma/launchpadPlasmaMod/: CMakeLists.txt  metadata.desktop
plasma/nitrux/: metadata.desktop
plasma/nitrux-dark/: metadata.desktop
plasma/nitrux-dark/dialogs/: background.svgz
plasma/nitrux-dark/icons/: computer.svgz  distribute.svgz  edit.svgz  input.svgz  osd.svgz  plasmavault.svgz  preferences.svgz  telegram.svgz
plasma/nitrux-dark/widgets/: background.svgz  bar_meter_horizontal.svgz  configuration-icons.svgz  frame.svgz  glowbar.svgz  panel-background.svgz  tasks.svgz  translucentbackground.svgz
plasma/nitrux/dialogs/: background.svgz
plasma/nitrux/icons/: apport.svgz  computer.svgz  network.svgz  notification.svgz  osd.svgz
plasma/nitrux/widgets/: background.svgz  configuration-icons.svgz  panel-background.svgz  scrollbar.svgz  tasks.svgz  translucentbackground.svgz
plasma/nomad/: CMakeLists.txt  colors  metadata.desktop
plasma/nomad-dark/: CMakeLists.txt  colors  metadata.desktop
plasma/nomad-dark/icons/: battery.svgz  klipper.svgz  media.svgz  plasmavault.svgz  start.svgz
plasma/nomad-dark/widgets/: bar_meter_vertical.svgz  button.svgz  configuration-icons.svgz  lineedit.svgz  panel-background.svgz  scrollbar.svgz  tasks.svgz  translucentbackground.svgz
plasma/nomad/dialogs/: background.svgz
plasma/nomad/icons/: configure.svgz  device.svgz  kdeconnect.svgz  network.svgz  notification.svgz  phone.svgz  plasmavault.svgz  preferences.svgz  start.svgz  system.svgz  video.svgz  wallet.svgz
plasma/nomad/widgets/: background.svgz  bar_meter_vertical.svgz  button.svgz  checkmarks.svgz  clock.svgz  lineedit.svgz  panel-background.svgz  scrollbar.svgz  slider.svgz  tabbar.svgz  tasks.svgz  translucentbackground.svgz  viewitem.svgz
plasma/org.kde.latte.separator/: CMakeLists.txt
plasma/org.kde.plasma.dittomenu/: CMakeLists.txt  metadata.desktop
plasma/org.kde.plasma.dittomenu/translate/: ReadMe.md  ko.po  template.pot
plasma/org.kde.video/: CMakeLists.txt  metadata.desktop
plasma/org.kde.videolockscreen/: CMakeLists.txt  metadata.desktop
plasma/org.kde.windowtitle/: CMakeLists.txt
wallpapers/: CMakeLists.txt
wallpapers/Aqua/: metadata.json
wallpapers/Aqua_Dark/: metadata.json
wallpapers/BASIC/: metadata.desktop
wallpapers/BASIC_DARK/: metadata.desktop
wallpapers/Cambridge/: metadata.desktop
wallpapers/Cask/: metadata.desktop
wallpapers/ChangeTheRules/: metadata.desktop
wallpapers/ChangeTheRules-Light/: metadata.desktop
wallpapers/EMP_Museum/: metadata.desktop
wallpapers/Inno/: metadata.desktop
wallpapers/Landscape/: metadata.desktop
wallpapers/Nomad/: metadata.desktop
wallpapers/Opal/: metadata.desktop
wallpapers/Opal_Colors/: metadata.desktop
wallpapers/Opal_NX/: metadata.desktop
wallpapers/Zpace/: metadata.desktop
(+248 files in other folders)
