install(FILES Nitrux.colors DESTINATION ${CMAKE_INSTALL_PREFIX}/share/color-schemes/)
install(FILES NitruxDark.colors DESTINATION ${CMAKE_INSTALL_PREFIX}/share/color-schemes/)
install(FILES NitruxMix.colors DESTINATION ${CMAKE_INSTALL_PREFIX}/share/color-schemes/)
install(FILES NitruxDarkStation.colors DESTINATION ${CMAKE_INSTALL_PREFIX}/share/color-schemes/)
