install(DIRECTORY org.kde.nitrux.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/look-and-feel)
install(DIRECTORY org.kde.nitrux.dark.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/look-and-feel)
install(DIRECTORY org.kde.nitrux.mix.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/look-and-feel)
