add_subdirectory(nitrux)
add_subdirectory(nitrux-dark)
add_subdirectory(com.github.configurable_button)
add_subdirectory(launchpadPlasmaMod)
add_subdirectory(org.kde.latte.separator)
add_subdirectory(org.kde.plasma.dittomenu)
add_subdirectory(org.kde.video)
add_subdirectory(org.kde.videolockscreen)
add_subdirectory(org.kde.windowtitle)
add_subdirectory(a2n.blur.2)
add_subdirectory(org.kde.plasma.drawer)
