install(DIRECTORY Cambridge DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Nomad DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Landscape DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ChangeTheRules DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ChangeTheRules-Light DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY EMP_Museum DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Inno DESTINATION ${WALLPAPER_INSTALL_DIR})

