install(DIRECTORY Cambridge DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Nomad DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Landscape DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ChangeTheRules DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY ChangeTheRules-Light DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY EMP_Museum DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Inno DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Opal_NX DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Opal_Colors DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Cask DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Zpace DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY BASIC DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY BASIC_DARK DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Aqua DESTINATION ${WALLPAPER_INSTALL_DIR})
install(DIRECTORY Aqua_Dark DESTINATION ${WALLPAPER_INSTALL_DIR})
