install(FILES metadata.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/plasmoids/org.kde.plasma.dittomenu/)
install(DIRECTORY contents DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/plasmoids/org.kde.plasma.dittomenu)
install(DIRECTORY translate DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/plasmoids/org.kde.plasma.dittomenu)
